add soutenir and styl

--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -1,84 +1,87 @@
-<h1>Soutenir</h1>
-<p>Le projet étant porté par une association, il a besoin de vous pour être mis en œuvre ! </p>
+<div class="wrapper">
+  <div class="container">
+    <h1 class="header text-primary my-5">Soutenir</h1>
+    <p>Le projet étant porté par une association, il a besoin de vous pour être mis en œuvre ! </p>
+    <div class="pourquoi">
+      <h2>Pourquoi nous soutenir</h2>
+      <p>
+        Vos avantages
 
-<div class="pourquoi">
-  <h2>Pourquoi nous soutenir</h2>
-  <p>
-    Vos avantages
-
-    En externe : promouvoir les valeurs de votre entreprise
-    • Inscrire l’image de l’entreprise dans l’activité d’un acteur environnemental local, une association dynamique, reconnue et implantée sur le territoire
-    • Etre associé à la démarche d’exemplarité et d’innovation de ce projet en matière de réduction des déchets.
-    • Etre associé au zéro déchet, une tendance de plus en plus appréciée et recherchée
+        En externe : promouvoir les valeurs de votre entreprise
+        • Inscrire l’image de l’entreprise dans l’activité d’un acteur environnemental local, une association dynamique, reconnue et implantée sur le territoire
+        • Etre associé à la démarche d’exemplarité et d’innovation de ce projet en matière de réduction des déchets.
+        • Etre associé au zéro déchet, une tendance de plus en plus appréciée et recherchée
 
 
-    En interne : susciter fierté, engagement et créativité chez vos collaborateurs
-    • Renforcer l’épanouissement et la fierté d’appartenance parmi les collaborateurs, pour une entreprise qui se mobilise pour un mouvement social de fond et actuel
-    • Motiver son personnel, l’amener à se rassembler, se fédérer autour d’un projet commun et donc de favoriser la cohésion et l’esprit d’équipe
+        En interne : susciter fierté, engagement et créativité chez vos collaborateurs
+        • Renforcer l’épanouissement et la fierté d’appartenance parmi les collaborateurs, pour une entreprise qui se mobilise pour un mouvement social de fond et actuel
+        • Motiver son personnel, l’amener à se rassembler, se fédérer autour d’un projet commun et donc de favoriser la cohésion et l’esprit d’équipe
 
-    Mobilisation : sensibiliser les équipes autour de l'écologie
-    Le Défi représente une occasion unique de créer un lien privilégié entre votre entreprise et vos clients, fournisseurs et collaborateurs. Proposez-leur de s'inscrire ! Votre implication dans le Défi permet de fédérer les énergies et valoriser le sentiment d’appartenir à un réseau d'entreprises et un territoire partageant les mêmes valeurs.
+        Mobilisation : sensibiliser les équipes autour de l'écologie
+        Le Défi représente une occasion unique de créer un lien privilégié entre votre entreprise et vos clients, fournisseurs et collaborateurs. Proposez-leur de s'inscrire ! Votre implication dans le Défi permet de fédérer les énergies et valoriser le sentiment d’appartenir à un réseau d'entreprises et un territoire partageant les mêmes valeurs.
 
-    Réseau : développer un nouveau tissu de relations
-    • Collaborer à une action citoyenne qui implique durablement l’entreprise dans la vie locale et met en valeur l’attractivité de ce territoire ;
-    • Participer à la création d’un réseau de partenaires et tisser des liens avec d’autres entreprises et partenaires publics.
-    -Etre partenaire du développement du zéro déchet sur la région
-  </p>
-</div>
+        Réseau : développer un nouveau tissu de relations
+        • Collaborer à une action citoyenne qui implique durablement l’entreprise dans la vie locale et met en valeur l’attractivité de ce territoire ;
+        • Participer à la création d’un réseau de partenaires et tisser des liens avec d’autres entreprises et partenaires publics.
+        -Etre partenaire du développement du zéro déchet sur la région
+      </p>
+    </div>
 
-<div class="mecenat">
-  <h1>Mécenat</h1>
-  <p>Ekolo[geek] est habilitée à délivrer des reçus fiscaux en contrepartie d'une action de mécénat.
-  Conformément à la loi N°2003-709 sur le mécénat, le soutien financier ouvre droit à une réduction d''impôt sur les sociétés de 60% du montant du don dans la limite d’un plafond de 0,05 % du chiffre d’affaires. La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus !
+    <div class="mecenat">
+      <h1>Mécenat</h1>
+      <p>Ekolo[geek] est habilitée à délivrer des reçus fiscaux en contrepartie d'une action de mécénat.
+        Conformément à la loi N°2003-709 sur le mécénat, le soutien financier ouvre droit à une réduction d''impôt sur les sociétés de 60% du montant du don dans la limite d’un plafond de 0,05 % du chiffre d’affaires. La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus !
 
-  Les entreprises partenaires peuvent également faire le choix d’un soutien en nature (prêt ou achat de matériel, fournitures etc…) ou en compétences. A ce titre, les dons seront valorisés par l’entreprise à leur juste prix.
+        Les entreprises partenaires peuvent également faire le choix d’un soutien en nature (prêt ou achat de matériel, fournitures etc…) ou en compétences. A ce titre, les dons seront valorisés par l’entreprise à leur juste prix.
 
-  Nos besoins
-    • Don en argent
-    • Impressions de supports : affiches, flyers, supports d'animations...
-    • Communication : création et/ou diffusion de supports (papier, radio, vidéo, réseaux sociaux...), intégration web
-    • Utilisation de salles pour les ateliers collectifs et les soirées de lancement et de clôture
-    • Buffets bio pour les rencontres collectives : boissons, nourriture, logistique
+        Nos besoins
+        • Don en argent
+        • Impressions de supports : affiches, flyers, supports d'animations...
+        • Communication : création et/ou diffusion de supports (papier, radio, vidéo, réseaux sociaux...), intégration web
+        • Utilisation de salles pour les ateliers collectifs et les soirées de lancement et de clôture
+        • Buffets bio pour les rencontres collectives : boissons, nourriture, logistique
 
-  Les contreparties
+        Les contreparties
 
-  Visibilité : profiter de l’impact médiatique
-      • Présence de votre logo sur les supports de communication et d’information du Défi : affiches, flyer, dossiers de presse, site et réseaux sociaux de l'association...
-      • Présentation de votre entreprise sur le site internet du Défi, votre logo, et lien vers votre site
+        Visibilité : profiter de l’impact médiatique
+        • Présence de votre logo sur les supports de communication et d’information du Défi : affiches, flyer, dossiers de presse, site et réseaux sociaux de l'association...
+        • Présentation de votre entreprise sur le site internet du Défi, votre logo, et lien vers votre site
 
-  Invitations
-  A l'événement de lancement et à la soirée de clôture
+        Invitations
+        A l'événement de lancement et à la soirée de clôture
 
-  Participation au Défi
-  Selon la valeur de votre don, vous pourrez bénéficier d'une réduction sur le montant de votre participation au Défi.
+        Participation au Défi
+        Selon la valeur de votre don, vous pourrez bénéficier d'une réduction sur le montant de votre participation au Défi.
 
-  Abattement fiscal : votre don vous coûte moins cher
-  La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus ! Exemple pour un don de 1 000€, vous aurez droit à un abattement fiscal de 60% soit 600€. Vous ne dépenserez en réalité que 400€ !
+        Abattement fiscal : votre don vous coûte moins cher
+        La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus ! Exemple pour un don de 1 000€, vous aurez droit à un abattement fiscal de 60% soit 600€. Vous ne dépenserez en réalité que 400€ !
 
-  Toute autre proposition est bienvenue et sera étudiée.
-  </p>
-</div>
+        Toute autre proposition est bienvenue et sera étudiée.
+      </p>
+    </div>
 
-<div class="don">
-  <h1>Don</h1>
-  <p>Les particuliers peuvent également soutenir le projet, à travers le don. Chaque contribution est importante, quelque soit le montant. Retrouvez ici les noms de nos donateurs.
+    <div class="don">
+      <h1>Don</h1>
+      <p>Les particuliers peuvent également soutenir le projet, à travers le don. Chaque contribution est importante, quelque soit le montant. Retrouvez ici les noms de nos donateurs.
 
-  Lien pour donner : https://www.helloasso.com/associations/ekolo-geek/formulaires/1</p>
-</div>
+        Lien pour donner : https://www.helloasso.com/associations/ekolo-geek/formulaires/1</p>
+    </div>
 
-<div class="partager">
-  <h1>Partager</h1>
-  <p>Parlez du projet autour de vous ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
-  Dossier de mécénat : https://www.dropbox.com/s/0ln6rx81xmfo1cg/D%C3%A9fi%20ZD%20Pro%20-%20Dossier%20de%20m%C3%A9c%C3%A9nat.pdf?dl=0
+    <div class="partager">
+      <h1>Partager</h1>
+      <p>Parlez du projet autour de vous ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
+        Dossier de mécénat : https://www.dropbox.com/s/0ln6rx81xmfo1cg/D%C3%A9fi%20ZD%20Pro%20-%20Dossier%20de%20m%C3%A9c%C3%A9nat.pdf?dl=0
 
-  À remplir ! liens à partager, contenus pour créer leur com (visuels, textes, vidéos, liens vers boutons d'action) , communiqué de presse
-  </p>
-</div>
+        À remplir ! liens à partager, contenus pour créer leur com (visuels, textes, vidéos, liens vers boutons d'action) , communiqué de presse
+      </p>
+    </div>
 
-<div class="temoigner">
-  <h1>Témoigner</h1>
-    <p>Vous êtes un professionnel.le déjà engagé.e dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une entreprise éco exemplaire ?
-    Partagez votre expérience ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
+    <div class="temoigner">
+      <h1>Témoigner</h1>
+      <p>Vous êtes un professionnel.le déjà engagé.e dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une entreprise éco exemplaire ?
+        Partagez votre expérience ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
 
-    Lien vers contact</p>
+        Lien vers contact</p>
+    </div>
+  </div>
 </div>
