--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg justify-content-end" id="nav_bar">
+<nav class="navbar navbar-expand-lg justify-content-end position-fixed" id="nav_bar">
   <div class="navbar-logo align-items-center justify-content-center" id="nav_logo">
     <%= link_to root_path, class:"navbar-brand" do %>
       <%= inline_svg "logo", width:50 %>
