style 2.0 by Julien, be carful

--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -4,6 +4,20 @@
 
 .wrapper {
   background: $light-gray;
+  position: relative;
+  top: 360px;
+  @media only screen
+  and (max-width: $mobile)
+  and (max-width: $tablet) {
+    position: relative;
+    top: 120px;
+  }
+  @media only screen
+  and (min-width: $tablet)
+  and (min-width: $tablet) {
+    position: relative;
+    top: 360px;
+  }
 }
 
 .title {
@@ -66,9 +80,11 @@
 .illustration {
   img {
     width: 400px;
-
     @media (max-width: $mobile) {
       width: 300px;
     }
   }
 }
+ body {
+   position: relative;
+ }
