--- a/app/stylesheets/components/_carousel.scss
+++ b/app/stylesheets/components/_carousel.scss
@@ -1,9 +1,11 @@
 .carousel {
+  position: absolute;
+  top: 0;
   .carousel-inner {
     height: 500px;
     .carousel-item {
       object-position: center !important;
-      max-height: 100%;
+      max-height: 500px;
       max-width: 100%;
     }
     @media (max-height: $tablet) {
