--- a/app/stylesheets/components/_footer.scss
+++ b/app/stylesheets/components/_footer.scss
@@ -1,7 +1,18 @@
 .footer {
-  background: $light-gray;
+  background: $primary;
+  z-index: 10;
   .footer-link {
     width: 100%;
-    color: $primary;
+    color: white;
+  }
+  #logo-footer {
+    background: white;
+    padding: 5px;
+  }
+  a {
+    color: white;
+  }
+  a:hover {
+    color: $secondary;
   }
 }
