--- a/app/stylesheets/components/_shame.scss
+++ b/app/stylesheets/components/_shame.scss
@@ -73,3 +73,10 @@
     }
   }
 }
+
+.green-bg {
+  background-color: $secondary;
+  color: white;
+  display: inline-block;
+  padding: 5px 10px;
+}
