change size navbar and footer

--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -16,7 +16,7 @@
       </li>
       <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="/comment" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
-          comment
+          COMMENT
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "Les objectifs du défi", comment_path(anchor: "comment1"), class:"dropdown-item text-primary"%>
@@ -29,7 +29,7 @@
       </li>
       <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="/pourquoi" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
-          Pourquoi
+          POURQUOI
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "Pourquoi réduire ses déchets ?", pourquoi_path(anchor: "pourquoi1"), class:"dropdown-item text-primary"%>
@@ -38,7 +38,7 @@
       </li>
       <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="/soutenir" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
-          Soutenir
+          SOUTENIR
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <%= link_to "Pourquoi nous soutenir ?", "/soutenir", class:"dropdown-item text-primary", id:"soutenir1"%>
@@ -49,10 +49,7 @@
         </div>
       </li>
       <li class="nav-item m-2">
-        <%= link_to "Partenaires", "/partenaires", class:"nav-link text-light-gray" %>
-      </li>
-      <li class="nav-item m-2">
-        <%= link_to "S'inscrire", "/inscription", class:"nav-link text-light-gray" %>
+        <%= link_to "S'INSCRIRE", "/inscription", class:"nav-link text-light-gray" %>
       </li>
       <!-- <li class="nav-item">
         <%= link_to destroy_user_session_path, method: :delete, class:"nav-link" do %>
