--- a/app/stylesheets/components/_footer.scss
+++ b/app/stylesheets/components/_footer.scss
@@ -2,6 +2,7 @@
   background: $primary;
   z-index: 10;
   height: 100px;
+
   .footer-link {
     width: 100%;
     color: white;
@@ -15,5 +16,18 @@
   }
   a:hover {
     color: $secondary;
+  }
+
+  @media (max-width: $desktop) {
+    height: auto;
+    padding: 0 !important;
+
+    .ekolo-margin {
+      margin: 5px !important;
+    }
+
+    .social-links {
+      margin: 10px !important;
+    }
   }
 }
