added the footer in all pages

--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -20,4 +20,5 @@
       <%= link_to "contact", root_path, class:"btn btn-secondary"%>
     </div>
   </div>
+  <%= render 'shared/footer' %>
 </div>
