--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,25 +1,32 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag "poubelle.png", class:"d-block w-100", alt:"First slide" %>
-      <div class="carousel-caption d-none d-md-block">
-        <h2>Slide 1</h2>
-        <p>Explicatioln de l'image 1</p>
+      <%= image_tag "gestion", class:"d-block w-100", alt:"First slide" %>
+      <div class="carousel-caption">
+        <h5 class="bg-secondary text-slide p-lg-2">Mieux gérer ses déchets de fonctionnement</h5>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "desk", class:"d-block w-100", alt:"Second slide" %>
-      <div class="carousel-caption d-none d-md-block">
-        <h2>Slide 2</h2>
-        <p>Explicatioln de l'image 2</p>
+      <%= image_tag "mecenat", class:"d-block w-100", alt:"Second slide" %>
+      <div class="carousel-caption">
+        <div class="d-md-block">
+          <h5 class="bg-primary text-slide p-lg-2">Mécéner le Défi ZD des pros</h5>
+        </div>
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "hands", class:"d-block w-100", alt:"Third slide" %>
-      <div class="carousel-caption d-none d-md-block">
-        <h2>Slide 3</h2>
-        <p>Explicatioln de l'image 3</p>
+      <%= image_tag "mobilisation", class:"d-block w-100", alt:"Third slide" %>
+      <div class="carousel-caption d-md-block">
+        <h5 class="bg-secondary text-slide p-lg-2">Mobiliser le collectif</h5>
       </div>
     </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
