--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -11,7 +11,7 @@
     <ul class="navbar-nav mr-5">
       <li class="nav-item m-2">
         <%= link_to root_path, class:"navbar-brand home-nav-link" do %>
-          <%= inline_svg "home", width: 30 %>
+          <%= inline_svg "Accueil", width: 30 %>
         <% end %>
       </li>
       <li class="nav-item m-2 dropdown">
