--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -7,9 +7,11 @@
   top: 70px;
   .nav-link {
     color: $light-gray;
+    font-weight: bold;
   }
   .home-nav-link {
     color: $light-gray;
+    font-size: 15px;
   }
   .logo-nav {
     background-image: image("logo.png");
