--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,4 +1,4 @@
-<div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel">
+<div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel" data-interval="7000">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <%= image_tag "gestion", class:"d-block w-100", alt:"First slide" %>
