--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <div class="container">
-    <p>un truc visuel avec quelques arguments clés cliquables (lien vers l'ancrage dans la page concernée)</p>
+    <p class="my-5">un truc visuel avec quelques arguments clés cliquables (lien vers l'ancrage dans la page concernée)</p>
     <h2>Objectif: réduire vos déchets de fonctionnement de 10%</h2>
     <h5 class="my-4 ml-3">Comment :</h5>
     <ul class="list mb-5 bullet-custom">
