change soutenir content

--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,10 +1,10 @@
 <div class="wrapper">
   <div id="comment1"></div>
   <div class="container mt-5 mb-5">
-    <h1 class="header text-primary mb-5 text-center">Comment</h1>
+    <h1 class="header text-primary mb-5 text-center pt-5">Comment</h1>
     <div class="header-padding-comment" >
       <h2 class="green-bg">Les objectifs du Défi</h2>
-      <p class="text">Le Défi consiste en l'accompagnement structurel et individuel des établissements participants dans l’étude et la mise en place de solutions techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.</p>
+      <p class="text">Le Défi consiste en l'<b>accompagnement structurel et individuel</b> des établissements participants dans <b>l’étude et la mise en place de solutions</b> techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.</p>
       <h5 class="my-4 ml-3">Objectifs principaux :</h5>
       <ul class="list mb-5 bullet-custom">
         <li class="my-2 ml-lg-4">
@@ -46,15 +46,15 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <%= image_tag "square-desk", width: 300, class:"header-padding-comment-image" %>
+          <%= image_tag "carte", width: 400, class:"header-padding-comment-image" %>
         </div>
       </div>
       <div class="col-lg-6">
         <div>
           <h2 class="green-bg" >Les structures éligibles</h2>
           <p class="text">
-            Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : public ou privé, quelque soit son activité ou sa taille.
-            Pour ce premier Défi, les structures participantes doivent résider dans le territoire de Bordeaux Métropole.
+            Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : <b>public ou privé</b>, quelque soit son activité ou sa taille.
+            Pour ce premier Défi, les structures participantes doivent résider dans <b>le territoire de Bordeaux Métropole</b>.
 
             L'objectif est d'étendre le Défi à de nouveaux territoires. Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? - lien vers accueillir
           </p>
@@ -72,23 +72,23 @@
     <div class="mt-5">
       <h2 class="green-bg">Comment ça se passe ?</h2>
       Collecte de données
-      <p>Sur une durée de 6 mois, les structures devront mesurer régulièrement leur production de déchets et évaluer leurs comportement, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur progression et leur classement par rapport aux autres.</p>
+      <p>Sur une durée de 6 mois, les structures devront <b>mesurer</b> régulièrement leur <b>production de déchets</b> et évaluer leurs <b>comportement</b>, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur <b>progression</b> et leur <b>classement</b> par rapport aux autres.</p>
       <h5 class="my-4 ml-3">Activités collectives</h5>
       <ul class="list mb-5 bullet-custom">
         <li class="my-2 ml-lg-4">
-          Ateliers-formations échanges (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
+          <b>Ateliers-formations échanges</b> (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
         </li>
         <li class="my-2 ml-lg-4">
-          Rencontres et visites d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences hors-site de pairs.
+          <b>Rencontres et visites</b> d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences hors-site de pairs.
         </li>
         <li class="my-2 ml-lg-4">
-          Ateliers pratiques (outils de communication-sensibilisation, fabrication de produits…)
+          <b>Ateliers pratiques</b> (outils de communication-sensibilisation, fabrication de produits…)
         </li>
         <li class="my-2 ml-lg-4">
           Serious game pour adultes sur les déchets (jeu de société, grand jeu, animation ludique…)
         </li>
         <li class="my-2 ml-lg-4">
-          Durant le défi, des "sous-défis" facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
+          Durant le défi, des "<b>sous-défis</b>" facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
         </li>
       </ul>
       <div id="comment5"></div>
@@ -102,13 +102,13 @@
     <div >
       <h2 class="mb-3 mt-5 green-bg" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center my-5">
-        <%= image_tag "timeline", style:"width: 100%", class:"px-lg-5" %>
+        <%= image_tag "Frise", style:"width: 100%", class:"px-lg-5" %>
       </div>
       <%= link_to "télécharger", root_path %>
     </div>
     <div>
       <h2 class="mb-3 mt-5 green-bg" >Combien ça coûte ?</h2>
-      <p>La participation au Défi comprend un prix forfaitaire de 150€, plus un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
+      <p>La participation au Défi comprend un <b>prix forfaitaire</b> de 150€, <b>plus</b> un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
       <h5 class="my-4 ml-3">Exemples :</h5>
       <ul class="list mb-5 bullet-custom  bullet-secondary">
         <li class="my-2 ml-lg-4">
