--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -1,7 +1,7 @@
 
 <div class="wrapper">
   <div class="container">
-    <h1 class="header text-primary my-5">S'inscrire</h1>
+    <h1 class="header text-primary my-5 text-center pt-5">S'inscrire</h1>
     <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez vous inscrire début décembre.</p>
     <p>D'ici là vous pouvez agir de votre côté ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
     <h5 class="my-4 ml-3">Objectifs principaux :</h5>
