--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,7 +1,8 @@
 <div class="wrapper h-100">
   <div class="container">
     <div id="pourquoi1"></div>
-    <div class="title my-5 header-padding-pourquoi" >
+    <h1 class="header text-primary mt-5 text-center pt-5">Pourquoi</h1>
+    <div class="title header-padding-pourquoi" >
       <h2> Pourquoi réduire ses déchets en entreprise ? </h2>
     </div>
 
