--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -1,87 +1,53 @@
 <div class="wrapper">
   <div class="container">
-    <h1 class="header text-primary my-5">Soutenir</h1>
-    <p>Le projet étant porté par une association, il a besoin de vous pour être mis en œuvre ! </p>
-    <div class="pourquoi">
-      <h2>Pourquoi nous soutenir</h2>
-      <p>
-        Vos avantages
-
-        En externe : promouvoir les valeurs de votre entreprise
-        • Inscrire l’image de l’entreprise dans l’activité d’un acteur environnemental local, une association dynamique, reconnue et implantée sur le territoire
-        • Etre associé à la démarche d’exemplarité et d’innovation de ce projet en matière de réduction des déchets.
-        • Etre associé au zéro déchet, une tendance de plus en plus appréciée et recherchée
-
-
-        En interne : susciter fierté, engagement et créativité chez vos collaborateurs
-        • Renforcer l’épanouissement et la fierté d’appartenance parmi les collaborateurs, pour une entreprise qui se mobilise pour un mouvement social de fond et actuel
-        • Motiver son personnel, l’amener à se rassembler, se fédérer autour d’un projet commun et donc de favoriser la cohésion et l’esprit d’équipe
-
-        Mobilisation : sensibiliser les équipes autour de l'écologie
-        Le Défi représente une occasion unique de créer un lien privilégié entre votre entreprise et vos clients, fournisseurs et collaborateurs. Proposez-leur de s'inscrire ! Votre implication dans le Défi permet de fédérer les énergies et valoriser le sentiment d’appartenir à un réseau d'entreprises et un territoire partageant les mêmes valeurs.
-
-        Réseau : développer un nouveau tissu de relations
-        • Collaborer à une action citoyenne qui implique durablement l’entreprise dans la vie locale et met en valeur l’attractivité de ce territoire ;
-        • Participer à la création d’un réseau de partenaires et tisser des liens avec d’autres entreprises et partenaires publics.
-        -Etre partenaire du développement du zéro déchet sur la région
-      </p>
-    </div>
-
+    <h1 class="header text-primary my-5 pt-5 text-center">Soutenir</h1>
+    <p>Le projet étant porté par une association, il a <b>besoin de vous</b> pour être mis en œuvre ! </p>
     <div class="mecenat">
-      <h1>Mécenat</h1>
-      <p>Ekolo[geek] est habilitée à délivrer des reçus fiscaux en contrepartie d'une action de mécénat.
-        Conformément à la loi N°2003-709 sur le mécénat, le soutien financier ouvre droit à une réduction d''impôt sur les sociétés de 60% du montant du don dans la limite d’un plafond de 0,05 % du chiffre d’affaires. La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus !
-
-        Les entreprises partenaires peuvent également faire le choix d’un soutien en nature (prêt ou achat de matériel, fournitures etc…) ou en compétences. A ce titre, les dons seront valorisés par l’entreprise à leur juste prix.
-
-        Nos besoins
-        • Don en argent
-        • Impressions de supports : affiches, flyers, supports d'animations...
-        • Communication : création et/ou diffusion de supports (papier, radio, vidéo, réseaux sociaux...), intégration web
-        • Utilisation de salles pour les ateliers collectifs et les soirées de lancement et de clôture
-        • Buffets bio pour les rencontres collectives : boissons, nourriture, logistique
-
-        Les contreparties
-
-        Visibilité : profiter de l’impact médiatique
-        • Présence de votre logo sur les supports de communication et d’information du Défi : affiches, flyer, dossiers de presse, site et réseaux sociaux de l'association...
-        • Présentation de votre entreprise sur le site internet du Défi, votre logo, et lien vers votre site
-
-        Invitations
-        A l'événement de lancement et à la soirée de clôture
-
-        Participation au Défi
-        Selon la valeur de votre don, vous pourrez bénéficier d'une réduction sur le montant de votre participation au Défi.
-
-        Abattement fiscal : votre don vous coûte moins cher
-        La réduction fiscale de 60% sur votre impôt sur les sociétés vous permet de donner plus ! Exemple pour un don de 1 000€, vous aurez droit à un abattement fiscal de 60% soit 600€. Vous ne dépenserez en réalité que 400€ !
-
-        Toute autre proposition est bienvenue et sera étudiée.
+      <h2 class="mb-3">Mécenat</h2>
+      <p class="text">
+        En vous engageant à nos côtés par votre <b>soutien</b>, votre entreprise sera <b>associée à la démarche d'exemplarité et d'innovation</b> de ce projet en matière de réduction des déchets, et bénéficiera d'une <b>réduction fiscale</b> de 60% de votre don sur votre impôt sur les sociétés. Vous pouvez aussi choisir un <b>soutien en nature</b> (prêt ou achat de matériel, fournitures etc...) <b>ou en compétences</b>. Pour en savoir plus sur vos avantages à nous soutenir, et mieux connaître nos besoins, consultez le <b>dossier de mécénat</b>.
+      </p>
+      <h2 class="mb-3">Don</h2>
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="d-flex justify-content-center">
+            <%= image_tag "Don", width:300, height: 300 %>
+          </div>
+        </div>
+        <div class="col-lg-6 d-flex flex-column justify-content-center align-items-center">
+          <p>
+            Les particuliers peuvent également soutenir le projet, à travers le don. <b>Chaque contribution est importante</b>, quelque soit le montant.
+          </p>
+          <%= link_to "Nous soutenir", "https://www.helloasso.com/associations/ekolo-geek/formulaires/1", class:"btn btn-secondary text-white", target:"_blank" %>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h2 class="mb-3">Partage</h2>
+      <p class="text">
+        <b>Faîtes connaître le Défi</b> ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
+      </p>
+      <ul class="list mb-5 bullet-custom">
+        <li class="my-2 ml-lg-4">
+          Dossier de mécénat
+        </li>
+        <li class="my-2 ml-lg-4">
+          Charte Graphique
+        </li>
+        <li class="my-2 ml-lg-4">
+          Logo
+        </li>
+      </ul>
+      <p class="text">
+        Ces docs sont sur le drive. D'autres supports seront ajoutés en novembre.Pour la présentation vous pouvez vous inspirez de <%= link_to "ça", "https://docs.google.com/spreadsheets/d/1QC1h-YlOMGTor4QFJ8QrR3RTvzQ83j9UpqG8uc5D9IA/edit#gid=0", target:"_blank"%>.
       </p>
     </div>
-
-    <div class="don">
-      <h1>Don</h1>
-      <p>Les particuliers peuvent également soutenir le projet, à travers le don. Chaque contribution est importante, quelque soit le montant. Retrouvez ici les noms de nos donateurs.
-
-        Lien pour donner : https://www.helloasso.com/associations/ekolo-geek/formulaires/1</p>
-    </div>
-
-    <div class="partager">
-      <h1>Partager</h1>
-      <p>Parlez du projet autour de vous ! Dans vos différents réseaux personnels et professionnels, vos outils de communication etc. Voici des liens et outils que vous pouvez utiliser.
-        Dossier de mécénat : https://www.dropbox.com/s/0ln6rx81xmfo1cg/D%C3%A9fi%20ZD%20Pro%20-%20Dossier%20de%20m%C3%A9c%C3%A9nat.pdf?dl=0
-
-        À remplir ! liens à partager, contenus pour créer leur com (visuels, textes, vidéos, liens vers boutons d'action) , communiqué de presse
+    <div class="padding">
+      <h2 class="mb-3">Témoignage</h2>
+      <p>Vous êtes un professionnel.le <b>déjà engagé.e</b> dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une <b>entreprise éco exemplaire</b> ?
+      <b>Partagez votre expérience ! Mettez en valeur</b> votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
       </p>
-    </div>
-
-    <div class="temoigner">
-      <h1>Témoigner</h1>
-      <p>Vous êtes un professionnel.le déjà engagé.e dans une démarche de réduction des déchets ? Vous avez mis en place plusieurs gestes dans votre structure ? Vous êtes une entreprise éco exemplaire ?
-        Partagez votre expérience ! Mettez en valeur votre entreprise et vos employés ! Votre témoignage sera inspirant pour d'autres, qui bénéficieront de votre retour d'expérience et voudront s'engager également.
-
-        Lien vers contact</p>
+      <%= link_to "Contact", root_path, class:"btn btn-secondary" %>
     </div>
   </div>
   <%= render 'shared/footer' %>
