--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -44,11 +44,10 @@
           SOUTENIR
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "Pourquoi nous soutenir ?", "/soutenir", class:"dropdown-item text-primary", id:"soutenir1"%>
-          <%= link_to "Mécénat", "/soutenir", class:"dropdown-item text-primary", id:"soutenir2"%>
-          <%= link_to "Don", "/soutenir", class:"dropdown-item text-primary", id:"soutenir3"%>
-          <%= link_to "Partager", "/soutenir", class:"dropdown-item text-primary", id:"soutenir4"%>
-          <%= link_to "Témoigner", "/soutenir", class:"dropdown-item text-primary", id:"soutenir5"%>
+          <%= link_to "Mécénat",soutenir_path(anchor: "soutenir1"), class:"dropdown-item text-primary" %>
+          <%= link_to "Don", soutenir_path(anchor: "soutenir2"), class:"dropdown-item text-primary" %>
+          <%= link_to "Partage", soutenir_path(anchor: "soutenir3"), class:"dropdown-item text-primary" %>
+          <%= link_to "Témoignage", soutenir_path(anchor: "soutenir4"), class:"dropdown-item text-primary" %>
         </div>
       </li>
       <!-- <li class="nav-item">
